--- a/package.json
+++ b/package.json
@@ -16,8 +16,9 @@
     "react-redux": "^8.0.5",
     "react-router": "^6.4.2",
     "react-router-dom": "^6.4.2",
-    "react-scripts": "^2.1.3",
-    "sweetalert2": "^11.7.1",
+    "react-scripts": "^5.0.1",
+    "sweetalert2": "^11.4.8",
+    "uuid": "^9.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
