--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
   "name": "reusable-components",
   "version": "0.1.0",
-  "homepage": "https://omarahmed8k.github.io/reusable-components",
-  "private": true,
+  "private": false,
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.2",
     "@testing-library/jest-dom": "^5.16.5",
@@ -22,8 +21,6 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
